<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/light_grey"
        android:padding="10dp"
        android:textSize="48sp"
        android:text="@string/calc_text"
        android:gravity="right|bottom"
         />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/btnSeven"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            android:text="@string/_7"
            tools:ignore="UsingOnClickInXML"
            />

        <Button
            android:id="@+id/btnEight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            android:text="@string/_8"
            tools:ignore="UsingOnClickInXML"
            />

        <Button
            android:id="@+id/btnNine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            android:layout_weight="1"
            android:text="@string/_9"
            tools:ignore="UsingOnClickInXML"
            />

        <Button
            android:id="@+id/btnDivide"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            android:layout_width="0dp"
            tools:ignore="UsingOnClickInXML"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/Divide"
            />

    </LinearLayout>

</LinearLayout>